# eeyore

./: CMakeLists.txt  README.md  package.xml
cal/: eo_calibration.yaml  ir_calibration.yaml
cmake/: FindSpinnaker.cmake
examples/: boson_test.cpp  electro_optical_test.cpp
include/eeyore/: boson.hpp  electro_optical.hpp
src/: boson.cpp  electro_optical.cpp
